[+] insert new constants
